// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/glm-4.7-free",
    },
    "enigma": {
      "model": "opencode/glm-4.7-free",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "broodmother": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "broodmother": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "openai/gpt-5.2",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "openai/gpt-5.2",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "openai/gpt-5.2",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "openai/gpt-5.2",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "google/gemini-3-pro",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "clockwerk": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "tinker": {
      "model": "google/gemini-3-pro",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "google/gemini-3-pro",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "clockwerk": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "tinker": {
      "model": "google/gemini-3-pro",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for keeper when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
    "invoker": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for keeper with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
    "invoker": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (keeper uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "broodmother": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (mirana uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/kimi-k2.5-free",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
